# spl-dropper

./: .gitignore  Cargo.toml  README.md  recipients_example.csv
src/: main.rs
